# gtw-rs-sdk

./: Cargo.toml  Makefile  models.rs
examples/: account.rs  auth.rs  data_model.rs  example.rs  wallet.rs
scripts/: generate_types.rs  gtw_schema.json
src/: account.rs  auth.rs  client.rs  data_assest.rs  data_model.rs  lib.rs
src/apis/: account.rs  acl.rs  auth.rs  data_assest.rs  data_model.rs  mod.rs  wallet.rs
src/middleware/: auth_middleware.rs  header_middlware.rs  mod.rs
src/models/: generated_models.rs  helper_generic_paginated_response.rs  mod.rs
src/services/: ethereum.rs  mod.rs  solana.rs  sui.rs  wallet.rs
src/types/: mod.rs
src/utils/: error.rs  handle_response.rs  jwt.rs  mod.rs  validations.rs
