[package]
name = "gtw-rs-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bytes = "1.7.2"
dotenv = "0.15.0"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }  # Include the json feature
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
