[package]
name = "gtw-rs-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
surf = "2.3"
dotenv = "0.15.0"
log = "0.4.22"
async-std = { version = "1.12", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
ethers = "2.0.14"
http-types = "2.12.0"
jsonwebtoken = "8.2"

